feat: update by DuyLam

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+PORT=8080
+
 DATABASE_URI =mongodb+srv://admin:Duylam1302@cluster.o1swcm8.mongodb.net/openAI
 OPENAI_ORGANIZATION_ID=org-UIaraMXHiNGlxdPbR2DaLD7S
 OPENAI_API_KEY=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
