feat: update by DuyLam

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=8080
 
-DATABASE_URI =mongodb+srv://admin:Duylam1302@cluster.o1swcm8.mongodb.net/openAI
+DATABASE_URI =mongodb+srv://admin:Duylam1302@cluster.o1swcm8.mongodb.net/openAITest
 OPENAI_ORGANIZATION_ID=org-UIaraMXHiNGlxdPbR2DaLD7S
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
 TELEGRAM_API_KEY=5857555663:AAG6i8FqsHS8k8EaniRNueqObgH0VrjWVWA
 ACCESS_TOKEN_SECRET=asdasdjasdoaiudioau
