feat: update by DuyLam

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
+NODE_ENV=production
 PORT=8080
 
-DATABASE_URI =mongodb+srv://admin:Duylam1302@cluster.o1swcm8.mongodb.net/openAITest
+DATABASE_URI=mongodb://localhost:27017/gdai
 OPENAI_ORGANIZATION_ID=org-UIaraMXHiNGlxdPbR2DaLD7S
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
 TELEGRAM_API_KEY=5857555663:AAG6i8FqsHS8k8EaniRNueqObgH0VrjWVWA
 ACCESS_TOKEN_SECRET=asdasdjasdoaiudioau
